--- a/app/views/patrimonio/actasMovimientos/indexGeneralActaMovimiento.scala.html
+++ b/app/views/patrimonio/actasMovimientos/indexGeneralActaMovimiento.scala.html
@@ -52,15 +52,15 @@
 			<div class="col-sm-6 filtrosEstados" id="filtrosEstados">
 				<div class="btn-group">
 				  <button type="button" class="btn btn-default btn-filtros">
-				  	<i class="glyphicon glyphicon-pencil size-14"></i><br>Enviado
+				  	<i class="glyphicon glyphicon-arrow-right"></i><br>Enviado
 				  	@checkbox(formBuscador("btnFiltro[0]"), 'hidden -> "hidden")
 				  </button>
 				  <button type="button" rel="imputado" class="btn btn-default btn-filtros">
-				  	<i class="glyphicon glyphicon-arrow-right"></i><br>Cancelado
+				  	<i class="glyphicon glyphicon-minus-sign"></i><br>Cancelado
 				  	@checkbox(formBuscador("btnFiltro[1]"), 'hidden -> "hidden")
 				  </button>
 				  <button type="button" rel="abierta" class="btn btn-default btn-filtros">
-				  	<i class="glyphicon glyphicon-arrow-right"></i><br>Recepcionado
+				  	<i class="glyphicon glyphicon-ok"></i><br>Recepcionado
 				  	@checkbox(formBuscador("btnFiltro[2]"), 'hidden -> "hidden")
 				  </button> 
 				  </button>
