--- a/app/views/dashboard/deudasGlobalizadas/deudasCuentasSoloDeuda.scala.html
+++ b/app/views/dashboard/deudasGlobalizadas/deudasCuentasSoloDeuda.scala.html
@@ -1,5 +1,5 @@
-@(proveedorHEARM:List[com.avaje.ebean.SqlRow],
-proveedorOtros:List[com.avaje.ebean.SqlRow],
+@(listadoPorCuentaHEARM:List[com.avaje.ebean.SqlRow],listadoPorCuentaOtros:List[com.avaje.ebean.SqlRow],idCuenta:Integer,
+nombre:String,
 formBuscador: DynamicForm,soloDeuda: Boolean = false)
 @import helper._
 @import utils._
@@ -8,13 +8,12 @@ formBuscador: DynamicForm,soloDeuda: Boolean = false)
 @import java.math.BigDecimal;var ptmpcompromiso=new java.math.BigDecimal(0);var ptmpdeuda=new java.math.BigDecimal(0);var mtdoh=new java.math.BigDecimal(0);var mtcoh=new java.math.BigDecimal(0);var mtdoo=new java.math.BigDecimal(0);var mtcoo=new java.math.BigDecimal(0)
 @import java.lang.Integer;var proveedorId =0;var bandera =0
 @import java.lang.String;var proveedorNombre =""
-@views.html.dashboard.mainDashboard("Deudas Servicios") {
+@views.html.dashboard.mainDashboard("Deudas Cuenta") {
 @views.html.dashboard.deudasGlobalizadas.navdeudas(formBuscador,soloDeuda)
-
 <div class="page-header">
 	<div class="row">
 		<div class="col-sm-7">
-			<h1>Deudas Honorarios</h1>
+			<h1>Deudas por Cuenta - @nombre</h1>
 		</div>
 		<div class="col-sm-5">
 			<div class="dropdown pull-right">
@@ -25,8 +24,10 @@ formBuscador: DynamicForm,soloDeuda: Boolean = false)
 			  </button>
 			  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
 			  	<li role="presentation">
+				
+				<li role="presentation">
 				  <a id="" role="menuitem" tabindex="-1" 
-				  href="@controllers.dashboard.routes.DeudasGlobalizadasReportesController.deudasDetallesHonorariosReportes()">Reporte Excel</a></li>
+				  href="@controllers.dashboard.routes.DeudasGlobalizadasReportesController.deudasCuentasReportes(idCuenta,soloDeuda)">Reporte Excel</a></li>
 			  </ul>
 			</div>
 		</div>
@@ -35,31 +36,27 @@ formBuscador: DynamicForm,soloDeuda: Boolean = false)
 <div class="row"  style="">
 	<div class="col-sm-12" style="">
 		<table class="table table-bordered table-hover" id="listaInforme">
-			@views.html.dashboard.deudasGlobalizadas.tablaDetalles("OPERATIVA","HEARM","")
+			@views.html.dashboard.deudasGlobalizadas.tablaDetallesSoloDeuda(nombre,"HEARM","")
 			<tbody>
-				@for(s <- proveedorHEARM){
-					 
-					
+				@for(s <- listadoPorCuentaHEARM){
 					@if(proveedorId != 0 && proveedorId != s.getInteger("proveedorId")){
 						<tr>
 							<td colspan="4" align="right"><b>@proveedorNombre - TOTAL</b></td>
 							<td><b>@utils.NumberUtils.moneda(ptmpdeuda)</b></td>
-							<td><b>@utils.NumberUtils.moneda(ptmpcompromiso)</b></td>
 							<td colspan="2"></td>
 						</tr>
 						<tr><td colspan="8"></td></tr>
 						@{ptmpdeuda = new java.math.BigDecimal(0)}
-						@{ptmpcompromiso = new java.math.BigDecimal(0)}
 						@{bandera = 0}
 					} 
 					@if(bandera == 0){
 						<tr style="background-color:#dfdfdf;">
-							<td colspan="8" align="center"><b>@s.getString("nombre_proveedor")</b></td>
+							<td colspan="7" align="center"><b>@s.getString("nombre_proveedor")</b></td>
 						</tr>
 						@{bandera = 1}
 					}
 						@{ptmpdeuda = ptmpdeuda.add(s.getBigDecimal("total_deuda"))}
-						@{ptmpcompromiso = ptmpcompromiso.add(s.getBigDecimal("total_compromiso"))}
+						 
 					 
 					<tr style="background-color:#ffffff;">
 						<td>@s.getInteger("numeroProvision")</td>
@@ -67,23 +64,22 @@ formBuscador: DynamicForm,soloDeuda: Boolean = false)
 						<td>@s.getString("expediente")</td>
 						<td>@s.getString("nombre_proveedor")</td>
 						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_deuda"))</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_compromiso"))</td>
 						<td>@s.getString("rubro")</td>
 						<td>@s.getString("descripcion")</td>
 					</tr>
 					@{mtdoh= mtdoh.add(s.getBigDecimal("total_deuda"))}
-					@{mtcoh= mtcoh.add(s.getBigDecimal("total_compromiso"))}
 					@{proveedorId = s.getInteger("proveedorId")}
 					@{proveedorNombre = s.getString("nombre_proveedor")}
+				
+					
 				}
-				@if(proveedorHEARM.size() >0){ 
+				@if(listadoPorCuentaHEARM.size() >0){ 
 					<tr>
 						<td colspan="4" align="right"><b>@proveedorNombre - TOTAL</b></td>
 						<td><b>@utils.NumberUtils.moneda(ptmpdeuda)</b></td>
-						<td><b>@utils.NumberUtils.moneda(ptmpcompromiso)</b></td>
 						<td colspan="2"></td>
 					</tr>
-					<tr><td colspan="8"></td></tr>
+					<tr><td colspan="7"></td></tr>
 				}	 
 				 
 			</tbody>
@@ -91,75 +87,6 @@ formBuscador: DynamicForm,soloDeuda: Boolean = false)
 				<tr style="background-color:#dfdfdf;">
 					<td colspan="4" align="right"><b>TOTALES</b></td>
 					<td><b>@utils.NumberUtils.moneda(mtdoh)</b></td>
-					<td><b>@utils.NumberUtils.moneda(mtcoh)</b></td>
-					<td colspan="2"></td>
-				</tr>
-			</tfoot>
-		</table>
-	</div>
-</div>
-<div class="row"  style="">
-	<div class="col-sm-12" style="">
-		<table class="table table-bordered table-hover" id="listaInforme">
-			@views.html.dashboard.deudasGlobalizadas.tablaDetalles("OPERATIVA","OTRAS INSTITUCIONES","")
-			<tbody>
-				@{ptmpdeuda = new java.math.BigDecimal(0)}
-				@{ptmpcompromiso = new java.math.BigDecimal(0)}
-				@{proveedorNombre = ""}	
-				@{proveedorId = 0}	
-				@{bandera = 0}
-				@for(s <- proveedorOtros){
-					@if(proveedorId != 0 && proveedorId != s.getInteger("proveedorId")){
-						<tr>
-							<td colspan="4" align="right"><b>@proveedorNombre - TOTAL</b></td>
-							<td><b>@utils.NumberUtils.moneda(ptmpdeuda)</b></td>
-							<td><b>@utils.NumberUtils.moneda(ptmpcompromiso)</b></td>
-							<td colspan="2"></td>
-						</tr>
-						<tr><td colspan="8"></td></tr>
-						@{ptmpdeuda = new java.math.BigDecimal(0)}
-						@{ptmpcompromiso = new java.math.BigDecimal(0)}
-						@{bandera = 0}
-					} 
-					@if(bandera == 0){
-						<tr style="background-color:#dfdfdf;">
-							<td colspan="8" align="center"><b>@s.getString("nombre_proveedor")</b></td>
-						</tr>
-						@{bandera = 1}
-					}
-					@{ptmpdeuda = ptmpdeuda.add(s.getBigDecimal("total_deuda"))}
-					@{ptmpcompromiso = ptmpcompromiso.add(s.getBigDecimal("total_compromiso"))}
-						
-					<tr>
-						<td>@s.getInteger("numeroProvision")</td>
-						<td>@(utils.DateUtils.formatDate(s.getDate("fechaExpediente")))</td>
-						<td>@s.getString("expediente")</td>
-						<td>@s.getString("nombre_proveedor")</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_deuda"))</td>
-						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_compromiso"))</td>
-						<td>@s.getString("rubro")</td>
-						<td>@s.getString("descripcion")</td>
-					</tr>
-					@{mtdoo= mtdoo.add(s.getBigDecimal("total_deuda"))}
-					@{mtcoo= mtcoo.add(s.getBigDecimal("total_compromiso"))}
-					@{proveedorId = s.getInteger("proveedorId")}
-					@{proveedorNombre = s.getString("nombre_proveedor")}	
-				}
-				@if(proveedorOtros.size() >0){ 
-				<tr>
-					<td colspan="4" align="right"><b>@proveedorNombre - TOTAL</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptmpdeuda)</b></td>
-					<td><b>@utils.NumberUtils.moneda(ptmpcompromiso)</b></td>
-					<td colspan="2"></td>
-				</tr>
-				<tr><td colspan="8"></td></tr>
-				}
-			</tbody>
-			<tfoot>
-				<tr>
-					<td colspan="4" align="right"><b>TOTALES</b></td>
-					<td><b>@utils.NumberUtils.moneda(mtdoo)</b></td>
-					<td><b>@utils.NumberUtils.moneda(mtcoo)</b></td>
 					<td colspan="2"></td>
 				</tr>
 			</tfoot>
@@ -167,4 +94,66 @@ formBuscador: DynamicForm,soloDeuda: Boolean = false)
 	</div>
 </div>
 
+<!-- -------------------------------------------------------------------------------- -->
+
+<div class="row"  style="">
+	<div class="col-sm-12" style="">
+		<table class="table table-bordered table-hover" id="listaInforme">
+			@views.html.dashboard.deudasGlobalizadas.tablaDetallesSoloDeuda(nombre,"OTRAS INSTITUCIONES","")
+			<tbody>
+				@{ptmpdeuda = new java.math.BigDecimal(0)}
+				@{ptmpcompromiso = new java.math.BigDecimal(0)}
+				@{proveedorNombre = ""}	
+				@{bandera = 0}
+				@for(s <- listadoPorCuentaOtros){
+					@if(proveedorId != 0 && proveedorId != s.getInteger("proveedorId")){
+						<tr>
+							<td colspan="4" align="right"><b>@proveedorNombre - TOTAL</b></td>
+							<td><b>@utils.NumberUtils.moneda(ptmpdeuda)</b></td>
+							<td colspan="2"></td>
+						</tr>
+						<tr><td colspan="7"></td></tr>
+						@{ptmpdeuda = new java.math.BigDecimal(0)}
+						@{bandera = 0}
+					} 
+					@if(bandera == 0){
+						<tr style="background-color:#dfdfdf;">
+							<td colspan="7" align="center"><b>@s.getString("nombre_proveedor")</b></td>
+						</tr>
+						@{bandera = 1}
+					}
+					@{ptmpdeuda = ptmpdeuda.add(s.getBigDecimal("total_deuda"))}
+						
+					<tr>
+						<td>@s.getInteger("numeroProvision")</td>
+						<td>@(utils.DateUtils.formatDate(s.getDate("fechaExpediente")))</td>
+						<td>@s.getString("expediente")</td>
+						<td>@s.getString("nombre_proveedor")</td>
+						<td>@utils.NumberUtils.moneda(s.getBigDecimal("total_deuda"))</td>
+						<td>@s.getString("rubro")</td>
+						<td>@s.getString("descripcion")</td>
+					</tr>
+					@{mtdoo= mtdoo.add(s.getBigDecimal("total_deuda"))}
+					@{proveedorId = s.getInteger("proveedorId")}
+					@{proveedorNombre = s.getString("nombre_proveedor")}	
+				}
+				@if(listadoPorCuentaOtros.size() >0){ 
+				<tr>
+					<td colspan="4" align="right"><b>@proveedorNombre - TOTAL</b></td>
+					<td><b>@utils.NumberUtils.moneda(ptmpdeuda)</b></td>
+					<td colspan="2"></td>
+				</tr>
+				<tr><td colspan="7"></td></tr>
+				}
+			</tbody>
+			<tfoot>
+				<tr>
+					<td colspan="4" align="right"><b>TOTALES</b></td>
+					<td><b>@utils.NumberUtils.moneda(mtdoo)</b></td>
+					<td colspan="2"></td>
+				</tr>
+			</tfoot>
+		</table>
+	</div>
+</div>
 }
