--- a/app/views/dashboard/deudasGlobalizadas/deudasDetallesServicios.scala.html
+++ b/app/views/dashboard/deudasGlobalizadas/deudasDetallesServicios.scala.html
@@ -1,7 +1,7 @@
 @(proveedorHEARM:List[com.avaje.ebean.SqlRow],proveedorOtros:List[com.avaje.ebean.SqlRow],
 peridoIds:java.util.List[Long],
 pret:java.util.Map[String,java.util.Map[Long,java.math.BigDecimal]],
-deudaSinPeriodos:java.util.Map[String,java.math.BigDecimal],formBuscador: DynamicForm)
+deudaSinPeriodos:java.util.Map[String,java.math.BigDecimal],formBuscador: DynamicForm,soloDeuda: Boolean = false)
 
 @import helper._
 @import utils._
@@ -11,7 +11,7 @@ deudaSinPeriodos:java.util.Map[String,java.math.BigDecimal],formBuscador: Dynami
 @import java.lang.Integer;var proveedorId =0;var bandera =0;var columnas =6
 @import java.lang.String;var proveedorNombre =""
 @views.html.dashboard.mainDashboard("Deudas Servicios") {
-@views.html.dashboard.deudasGlobalizadas.navdeudas(formBuscador)
+@views.html.dashboard.deudasGlobalizadas.navdeudas(formBuscador,soloDeuda)
 
 <div class="page-header">
 	<div class="row">
