--- a/app/views/dashboard/deudasGlobalizadas/navdeudas.scala.html
+++ b/app/views/dashboard/deudasGlobalizadas/navdeudas.scala.html
@@ -1,4 +1,4 @@
-@(formBuscador: DynamicForm)
+@(formBuscador: DynamicForm,soloDeuda: Boolean = false)
 @import helper._
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
 
@@ -13,35 +13,35 @@
 		         	
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Deudas Resumen <b class="caret"></b></a>
 		          <ul class="dropdown-menu">
-		          	<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasResumidas(0,false)">Deudas Resumen</a></li>
-		            <li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasResumidas(models.Deposito.HEARM,false)">Deudas Resumen HEARM</a></li>
-		            <li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasResumidas(-1,false)">Deudas Resumen Otras Instituciones</a></li>
-		            <li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasResumidas(0,true)">Deudas Resumen RA</a></li>
+		          	<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasResumidas(0,false,soloDeuda)">Deudas Resumen</a></li>
+		            <li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasResumidas(models.Deposito.HEARM,false,soloDeuda)">Deudas Resumen HEARM</a></li>
+		            <li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasResumidas(-1,false,soloDeuda)">Deudas Resumen Otras Instituciones</a></li>
+		            <li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasResumidas(0,true,soloDeuda)">Deudas Resumen RA</a></li>
 		          </ul>
 		        </li>
 		        <li class="dropdown">
 		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Deudas Detalles <b class="caret"></b></a>
 		          	<ul class="dropdown-menu">
-		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetalles(0,true)">Deudas RA</a></li>
-		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetalles(1530,false)">Deudas MOFAR</a></li>
-		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetalles(15156,false)">Deudas MACROFAR</a></li>
-		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetalles(4359,false)">Deudas SAN JORGE</a></li>
-		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetalles(2749,false)">Deudas IMPLANTEJ</a></li>
-		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetalles(14733,false)">Deudas BIOMISIONES</a></li>
+		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetalles(0,true,soloDeuda)">Deudas RA</a></li>
+		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetalles(1530,false,soloDeuda)">Deudas MOFAR</a></li>
+		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetalles(15156,false,soloDeuda)">Deudas MACROFAR</a></li>
+		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetalles(4359,false,soloDeuda)">Deudas SAN JORGE</a></li>
+		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetalles(2749,false,soloDeuda)">Deudas IMPLANTEJ</a></li>
+		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetalles(14733,false,soloDeuda)">Deudas BIOSIONES</a></li>
 		          		<!--  <li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetalles(1498,false)">Deudas MEDICALPRO</a></li>-->
-		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetalles(1589,false)">Deudas NR CONSTRUCCIONES-TABAY</a></li>
+		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetalles(1589,false,soloDeuda)">Deudas NR CONSTRUCCIONES-TABAY</a></li>
 		          	</ul>
 		        </li>
 		        <li class="dropdown">
 		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Deudas Otros  <b class="caret"></b></a>
 		          	<ul class="dropdown-menu">
-		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesOtrosProveedoresResumen(false,false)">Deudas Otros Proveedores Operativa - RESUMEN</a></li>
-		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesOtrosProveedoresResumen(false,true)">Deudas Otros Proveedores Equipamiento Operativa - RESUMEN</a></li>
+		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesOtrosProveedoresResumen(false,false,soloDeuda)">Deudas Otros Proveedores Operativa - RESUMEN</a></li>
+		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesOtrosProveedoresResumen(false,true,soloDeuda)">Deudas Otros Proveedores Equipamiento Operativa - RESUMEN</a></li>
 		          	
-		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesOtros(false,false)">Deudas Otros Proveedores Operativa</a></li>
-		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesOtros(false,true)">Deudas Otros Proveedores Equipamiento Operativa</a></li>
-		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesOtros(true,false)">Deudas Otros Proveedores PROFE</a></li>
-		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesOtros(true,true)">Deudas Otros Proveedores Equipamiento PROFE</a></li>
+		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesOtros(false,false,soloDeuda)">Deudas Otros Proveedores Operativa</a></li>
+		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesOtros(false,true,soloDeuda)">Deudas Otros Proveedores Equipamiento Operativa</a></li>
+		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesOtros(true,false,soloDeuda)">Deudas Otros Proveedores PROFE</a></li>
+		          		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesOtros(true,true,soloDeuda)">Deudas Otros Proveedores Equipamiento PROFE</a></li>
 		          	</ul>
 		        </li>
 		        
@@ -49,7 +49,7 @@
 		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Deudas Totales Cuentas  <b class="caret"></b></a>
 		          	<ul class="dropdown-menu">
 		          		@for(t <- TipoCuenta.find.all()) {
-		          			<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesCuentas(t.id.intValue())">@t.nombre</a></li>
+		          			<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesCuentas(t.id.intValue(),soloDeuda)">@t.nombre</a></li>
 		          		}
 		          		
 		          		
@@ -59,23 +59,25 @@
 		        <li class="dropdown">
 		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Servicios  <b class="caret"></b></a>
 		        	<ul class="dropdown-menu">
-		        		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesServiciosResumen()">Servicios RESUMEN</a></li>
-		        		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesServicios()">Servicios Detalles</a></li>
+		        		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesServiciosResumen(soloDeuda)">Servicios RESUMEN</a></li>
+		        		@if(false){
+		        		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesServicios(soloDeuda)">Servicios Detalles</a></li>
+		        		}
 		        	</ul>
 		        </li>
 		        
 		        <li class="dropdown">
 		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Honorarios  <b class="caret"></b></a>
 		        	<ul class="dropdown-menu">
-		        		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesHonorariosResumen()">Honorarios RESUMEN</a></li>
-		        		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesHonorarios()">Honorarios Detalles</a></li>
+		        		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesHonorariosResumen(soloDeuda)">Honorarios RESUMEN</a></li>
+		        		<li><a href="@controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesHonorarios(soloDeuda)">Honorarios Detalles</a></li>
 		        	</ul>
 		        </li>
 		         
 			        
 			    
 		      
-		       @helper.form(action = controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesPorProveedor()) {	
+		       @helper.form(action = controllers.dashboard.routes.DeudasGlobalizadasController.deudasDetallesPorProveedor(soloDeuda)) {	
 		      	<div class="input-group" style="padding: 10px 15px 0px 15px;">	
 					@inputText(formBuscador("proveedor.id"), 'hidden -> "hidden", 'id -> "proveedor_id")
 					@inputText(formBuscador("proveedor.nombre"), 'name -> "", 'class -> "form-control",'placeholder->"Proveedor", 'id -> "proveedor")
