add numero factura

--- a/app/views/compras/ordenes/crearOrden.scala.html
+++ b/app/views/compras/ordenes/crearOrden.scala.html
@@ -19,7 +19,7 @@
     @helper.form(action = controllers.compras.routes.OrdenesController.guardar()) {
 
 		@views.html.compras.ordenes.formOrden(ordenForm) 
-		@views.html.compras.ordenes.tabsOrden(true, ordenForm)	
+		@views.html.compras.ordenes.tabsOrden(true, ordenForm,null)	
 
 
 	}
