--- a/app/views/contabilidad/pagos/formPagoProveedor.scala.html
+++ b/app/views/contabilidad/pagos/formPagoProveedor.scala.html
@@ -200,6 +200,14 @@
 				}
 			</div>
 		</div>
+		<div class="col-sm-2">
+			<div class="checkbox">
+				<label for="inputape" class="control-label"> 
+					Revisar
+					@checkbox(pagoForm("arevisar"))
+				</label>
+			</div> 
+		</div>
 		
 		
 	</div>
