--- a/app/views/expediente/expediente/indexExpediente.scala.html
+++ b/app/views/expediente/expediente/indexExpediente.scala.html
@@ -10,12 +10,15 @@
 
 	<div class="page-header">
 		<div class="row">
-			<div class="col-sm-7">
+			<div class="col-sm-4">
 				<h1>Lista de expedientes</h1>
 			</div>
-			<div class="col-sm-5">
+			<div class="col-sm-8">
 				<div class="pull-right btn-header">
 					<a href="@controllers.expediente.routes.ExpedientesController.crearExpediente"  class="form-control btn btn-default"><i class="glyphicon glyphicon-plus-sign"></i> Nuevo expediente</a>
+				</div> 
+				<div class="pull-right btn-header">
+					<a href="@controllers.expediente.routes.ExpedientesController.crearSiguiente"  class="form-control btn btn-default"><i class="glyphicon glyphicon-plus-sign"></i> Siguiente expediente</a>
 				</div> 
 				<div class="dropdown pull-right btn-header">
 				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
